--- a/INDEX.html
+++ b/INDEX.html
@@ -11,24 +11,42 @@
 
 <body> <!--Estas tags envolvem o conteúdo principal da página HTML-->
     <header> 
-        <h1>About Me</h1> <!--<header> geralmente contém elementos como logotipos, títulos ou menus de navegação.-->
-        <!-- Adicione um menu de navegação aqui, se necessário -->
+        <h1>My Portifolio</h1> <!--<h1> do  <header>geralmente contém elementos como logotipos, títulos ou menus de navegação.-->
+        <nav> <!-- navegação-->
+            <ul> <!-- lista do menu de navegação-->
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#projeto">Projetos</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main> <!--<main> contém o conteúdo principal da página, -->
-        <section>
-            <h2>Sobre Mim</h2>
+        <section id="#about">
+            <h2>About Me</h2>
             <p>Coloque aqui uma breve descrição sobre você e seus interesses.</p>
         </section>
 
-        <section>
-            <h2>Projetos</h2>
+        <section id="#resume">
+            <h2>Resume</h2>
             <p>Lista de projetos que você deseja destacar no seu portfólio.</p>
         </section>
 
-        <section>
-            <h2>Contato</h2>
-            <p>Informações de contato, como email, telefone, etc.</p>
+        <section id="#projeto">
+            <h2>Projetos</h2>
+            <p>//</p>
+        </section>
+
+        <section id="#blog">
+            <h2>Blog</h2>
+            <p> </p>
+        </section>
+
+        <section id="#contacts">
+            <h2>Contacts</h2>
+            <p> // </p>
         </section>
     </main>
 
