--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+              <a href="mailto:danyelle.dados@gmail.com" class="contact-link">danyelle.dados@gmail.com</a>
             </div>
 
           </li>
