--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="data-ny/portifolio/assets/images/avatar1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/avatar1.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/avatar-1.png" alt="Danyelle Melo" width="80">
+          <img src="./assets/images/avatar1.png" alt="Danyelle Melo" width="80">
         </figure>
 
         <div class="info-content">
