--- a/index.html
+++ b/index.html
@@ -561,15 +561,10 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Data technician</h4>
+              <span>2022 — Present</span>
 
-              <span>2015 — Present</span>
-
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
-              </p>
+              <p>G4F - Great 4 the Future</p>
 
             </li>
 
