--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
               <h4 class="h4 timeline-item-title">Data technician</h4>
               <span>2022 — Present</span>
 
-              <p>G4F - Great 4 the Future</p>
+              <p class="timeline-text">G4F - Great 4 the Future</p>
 
             </li>
 
