--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
               <span>2022 — Present</span>
 
               <p class="timeline-text">
-                G4F - Great 4 the Future
+                G4F - Great 4 the Future, Client CHESF.
               </p>
 
             </li>
