--- a/index.html
+++ b/index.html
@@ -1097,9 +1097,9 @@
 
         <section class="mapbox" data-mapbox>
           <figure>
-            <iframe
-              src="https://www.google.com.br/maps/place/Jaboat%C3%A3o+dos+Guararapes,+PE/@-8.1456979,-35.0827534,12z/data=!3m1!4b1!4m6!3m5!1s0x7aae28fb2057b8d:0x5ff50166f4ee58b1!8m2!3d-8.1688125!4d-34.920874!16zL20vMGY5M2hu?entry=ttu"
-              width="400" height="300" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126386.02036558985!2d-35.00035105!3d-8.145876199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7aae28fb2057b8d%3A0x5ff50166f4ee58b1!2sJaboat%C3%A3o%20dos%20Guararapes%2C%20PE!5e0!3m2!1spt-BR!2sbr!4v1712251046441!5m2!1spt-BR!2sbr" 
+            width="600" height="450" style="border:0;" 
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </figure>
         </section>
 
