--- a/index.html
+++ b/index.html
@@ -126,15 +126,13 @@
         <div class="separator"></div>
 
         <ul class="social-list">
-
-
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+            <a href="https://www.linkedin.com/in/danyellemelo" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
-
         </ul>
+        
 
       </div>
 
