--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
+          <li class="social-item">
+            <a href="https://github.com/data-ny" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
         </ul>
         
 
