--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </aside>
 
 
-
+<!--------------------------------------------FIM ARRA LATERAL----------------------------------------------------------------------->
 
 
     <!--
@@ -201,18 +201,19 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
+            My name is Danyelle Melo and I am a Data Technician with experience in data analysis, BI, 
+            data extraction, automation and workflow management. 
+            I am passionate about transforming raw data into actionable insights that drive business success. 
+        </p>
 
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
-          </p>
+        <p>
+            I am a dedicated, proactive professional with a great capacity for learning. 
+            I have excellent communication and teamwork skills. I always look for new challenges and 
+            opportunities to develop my skills and contribute to the company's growth.  
+        </p>
+        <p>
+            If you are looking for an experienced Data Technician who is passionate about what she does, contact me! 
+        </p>
         </section>
 
 
