--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 <!-- PONTO 1 -->
                 <li class="skills-item">
                     <div class="title-wrapper">
-                        <h5 class="h5">Data analysis</h5>
+                        <h5 class="h5 styled-title">Data analysis</h5>
                         <p> 
                             <span class="bullet-point">&#9679;</span>BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.
                         </p> 
@@ -493,7 +493,7 @@
                 <!-- PONTO 2 -->
                 <li class="skills-item">
                     <div class="title-wrapper">
-                      <h5 class="h5">Automation</h5>
+                      <h5 class="h5 styled-title">Automation</h5>
                         <p> 
                           <span class="bullet-point">&#9679;</span>Creating scripts in Python to automate repetitive tasks.
                         </p>  
@@ -502,7 +502,7 @@
                 <!-- PONTO 3 -->
                 <li class="skills-item">
                     <div class="title-wrapper">
-                      <h5 class="h5">Workflow management</h5>
+                      <h5 class="h5 styled-title">Workflow management</h5>
                         <p>
                             <span class="bullet-point">&#9679;</span> Creating and managing workflows in Airflow.
                         </p>
@@ -511,7 +511,7 @@
                 <!-- PONTO 4 -->
                 <li class="skills-item">
                     <div class="title-wrapper">
-                      <h5 class="h5">Proficiency in tools</h5>
+                      <h5 class="h5 styled-title">Proficiency in tools</h5>
                         <p>
                             <span class="bullet-point">&#9679;</span> SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.
                         </p>
