--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <div class="title-wrapper">
                         <h5 class="h5 styled-title">Data analysis</h5>
                         <p> 
-                            <span class="bullet-point">&#9679;</span>BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.
+                          BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.
                         </p> 
                     </div>
                 </li>
@@ -495,7 +495,7 @@
                     <div class="title-wrapper">
                       <h5 class="h5 styled-title">Automation</h5>
                         <p> 
-                          <span class="bullet-point">&#9679;</span>Creating scripts in Python to automate repetitive tasks.
+                          Creating scripts in Python to automate repetitive tasks.
                         </p>  
                     </div>          
                 </li>
@@ -504,7 +504,7 @@
                     <div class="title-wrapper">
                       <h5 class="h5 styled-title">Workflow management</h5>
                         <p>
-                            <span class="bullet-point">&#9679;</span> Creating and managing workflows in Airflow.
+                          Creating and managing workflows in Airflow.
                         </p>
                     </div>
                 </li>
@@ -513,7 +513,7 @@
                     <div class="title-wrapper">
                       <h5 class="h5 styled-title">Proficiency in tools</h5>
                         <p>
-                            <span class="bullet-point">&#9679;</span> SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.
+                            SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.
                         </p>
                     </div>
                 </li>
