--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <li class="skills-item">
                     <div class="title-wrapper">
                         <h5 class="h5 styled-title">Data analysis</h5>
-                        <p> 
+                        <p class="title"> 
                           BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.
                         </p> 
                     </div>
